--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#649] New service probe and match lines for the JMON and RSE services of
+  IBM Explorer for z/OS. [Soldier of Fortran]
+
 o Removed a duplicate service probe for Memcached added in 2011 (the original
   probe was added in 2008) and reported as duplicate in 2013 by Pavel Kankovsky.
 
