--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#671][NSE] New script cics-user-brute does brute-force enumeration of CICS
+  usernames on IBM TN3270 services. [Soldier of Fortran]
+
 o [GH#671][NSE] New script cics-info checks IBM TN3270 services for CICS transaction
   services and extracts useful information. [Soldier of Fortran]
 
