New script impress-remote-discover. Closes #713

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,13 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#713] New script impress-remote-discover attempts to pair with the
+  LibreOffice Impress presentation remote service and extract version info.
+  Pairing is PIN-protected, and the script can optionally brute-force the PIN.
+  New service probe and match line also added. [Jeremy Hiebert]
+
 o [GH#620][GH#715][NSE] Added 8 new http-enum fingerprints for Hadoop
   infrastructure components. [Thomas Debize, Varunram Ganesh]
-  
+
 o [GH#629][NSE] Added two new fingerprints to http-default-accounts
   (APC Management Card, older NetScreen ScreenOS) [Steve Benson, nnposter]
 
