--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#731] NSE is now able to process HTTP responses with a Set-Cookie
+  header that has an extraneous trailing semicolon. [nnposter]
+
 o [Nsock] Handle any and all socket connect errors the same: raise as an Nsock
   error instead of fatal. This prevents Nmap and Ncat from quitting with
   "Strange error from connect:" [Daniel Miller]
