--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o No longer allow ICMP Time Exceeded messages to mark a host as down during
+  host discovery. Running traceroute at the same time as Nmap was causing
+  interference. [David Fifield]
+
 o [NSE][GH#807] Fixed a JSON library issue that was causing long integers
   to be expressed in the scientific/exponent notation. [nnposter]
 
