Allows unquoted cookie values to contain whitespace, as defined in RFC 6265. Fixes #844

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -24,6 +24,9 @@ o [NSE] The HTTP response object has a new member, fragment, which contains
   a partially received body (if any) when the overall request fails to
   complete. [nnposter]
 
+o [NSE][GH#844] NSE now correctly parses a Set-Cookie header that has unquoted
+  whitespace in the cookie value (which is allowed per RFC 6265). [nnposter]
+
 o [NSE][GH#731] NSE is now able to process HTTP responses with a Set-Cookie
   header that has an extraneous trailing semicolon. [nnposter]
 
