New script vmware-version

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] New script vmware-version queries VMWare SOAP API for version and
+  product information. Submitted in 2011, this was mistakenly turned into a
+  service probe that was unable to elicit any matches. [Aleksey Tyurin]
+
 o [Ncat] The --no-shutdown option now also works in connect mode, not only in
   listen mode.
 
