Updates smb.lua and msrpc.lua to support fully qualified path names as share names and updates match for OID. Modern Windows versions require FQPN and older version work the same. The level of information requested with the call NetShareGetInfo was reduced to support newer versions of Windows. This closes #266, closes #704, closes #238, and closes #883.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#266][GH#704][GH#238][GH#883] NSE libraries smb and msrpc now use 
+  fully qualified paths. SMB scripts now work against all modern versions 
+  of Microsoft Windows. [Paulino Calderon]
+
 o New service probes and matches for Apache HBase and Hadoop MapReduce. 
   [Paulino Calderon]
 
