--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] New script http-vuln-cve2017-1001000 detects a privilege escalation 
+  vulnerability in Wordpress 4.7.0 and 4.7.1 (CVE2017-1001000) [Vinamra Bhatia]
+
 o [NSE] New script smb-vuln-ms17-010 detects a critical remote code execution 
   vulnerability affecting SMBv1 servers in Microsoft Windows systems (ms17-010).
   The script also reports patched systems. [Paulino Calderon]
