--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,9 +3,9 @@
 o [NSE] smb library's share_get_list now properly uses anonymous connections
   first before falling back authenticating as a known user.
 
-o [NSE] New script smb-vuln-cve-2017-7494 detects a remote code execution
-  vulnerability affecting Samba versions 3.5.0 and greater with writable
-  shares. [Wong Wai Tuck]
+o [NSE] New script smb-vuln-cve-2017-7494 detects the "SambaCry"
+  remote code execution vulnerability affecting Samba versions 3.5.0
+  and greater with writable shares. [Wong Wai Tuck]
 
 o [NSE] Removed script http-hsts-verify. http-security-headers includes
   all the checks earlier implemented by http-hsts-verify. [Vinamra Bhatia]
