--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,7 @@
-# Nmap Changelog ($Id$); -*-text-*-
+﻿# Nmap Changelog ($Id$); -*-text-*-
+
+o [NSE] openwebnet-discovery retrieves device identifying information and
+ number of connected devices running on openwebnet protocol. [Rewanth Cool]
 
 o [NSE][GH#938] Fix handling of the objectSID Active Directory attribute
   by ldap.lua. [Tom Sellers]
