Adds HTTP protocol version as a new member of the HTTP response table. Closes 934

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 ﻿# Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#934] The HTTP response object has a new member, version, which
+  contains the HTTP protocol version string returned by the server, e.g. "1.1".
+  [nnposter]
+
 o [NSE] openwebnet-discovery retrieves device identifying information and
  number of connected devices running on openwebnet protocol. [Rewanth Cool]
 
